[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/pages/mods/mod_container.gd" type="Script" id=2]

[node name="ModContainer" type="PanelContainer"]
margin_right = 807.0
margin_bottom = 75.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 802.0
margin_bottom = 70.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 797.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModName" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 797.0
margin_bottom = 65.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "mod_name"
clip_text = true
align = 0

[node name="BlankSpace" type="Control" parent="MarginContainer/HBoxContainer"]
visible = false
margin_left = 504.0
margin_right = 777.0
margin_bottom = 65.0
size_flags_horizontal = 3

[node name="ModToggle" type="CheckButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 647.0
margin_right = 777.0
margin_bottom = 70.0

[connection signal="focus_entered" from="MarginContainer/HBoxContainer/ModName" to="." method="_on_ModName_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/ModName" to="." method="_on_ModName_focus_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/ModName" to="." method="_on_ModName_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/ModName" to="." method="_on_ModName_mouse_exited"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/ModToggle" to="." method="_on_ModToggle_toggled"]
